--- a/index.html
+++ b/index.html
@@ -1,59 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- meta -->
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fernando Lozano Pajarón | Software Engineer</title>
+    <meta name="description" content="Software Engineer. I love solving problems. 🌍 Work hard, travel harder.">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%230d9488'/><text x='50' y='50' font-family='sans-serif' font-size='60' font-weight='bold' fill='white' text-anchor='middle' dy='.35em'>F</text></svg>">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
-  <title>Fernando Lozano Pajarón | Personal Website</title>
-  <meta content="Software Engineer. I love solving problems. 🌍 Work hard, travel harder." name="description">
+    <style>
+        /* --- Color Palette (Teal/Emerald Theme) --- */
+        :root {
+            --bg-color: #f8fafc; /* Very light cool grey */
+            --text-color: #0f172a; /* Dark slate */
+            --accent-color: #0d9488; /* Teal 600 */
+            --accent-hover: #0f766e; /* Darker Teal */
+            --secondary-text: #64748b; /* Slate 500 */
+        }
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
+        /* Dark Mode Support */
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --bg-color: #0f172a; /* Dark Slate */
+                --text-color: #f1f5f9; /* Off-white */
+                --accent-color: #2dd4bf; /* Bright Teal */
+                --accent-hover: #5eead4; /* Brighter Teal */
+                --secondary-text: #94a3b8; /* Slate 400 */
+            }
+        }
 
-  <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        /* --- Global Styles --- */
+        * { margin: 0; padding: 0; box-sizing: border-box; }
 
-  <!-- Libraries CSS Files -->
-  <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
-  <link href="lib/hover/hover.min.css" rel="stylesheet">
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            line-height: 1.6;
+            /* Subtle gradient for a modern touch */
+            background-image: linear-gradient(to bottom right, var(--bg-color), transparent);
+            transition: background-color 0.3s ease, color 0.3s ease;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
 
-  <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+        /* --- Layout --- */
+        main {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 2rem;
+            text-align: center;
+        }
 
-  <!-- Responsive css -->
-  <link href="css/responsive.css" rel="stylesheet">
+        .container {
+            max-width: 800px;
+            width: 100%;
+            /* Fade-in animation */
+            animation: fadeIn 1s ease-out;
+        }
+
+        /* --- Typography --- */
+        .intro-label {
+            font-size: 0.875rem;
+            font-weight: 600;
+            color: var(--accent-color);
+            text-transform: uppercase;
+            letter-spacing: 0.15em;
+            margin-bottom: 1.2rem;
+            display: block;
+        }
+
+        h1 {
+            font-size: 4rem;
+            font-weight: 800;
+            margin-bottom: 0.5rem;
+            line-height: 1.1;
+            letter-spacing: -0.03em;
+            background: linear-gradient(45deg, var(--text-color), var(--secondary-text));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            /* Fallback for browsers that don't support text gradients */
+            color: var(--text-color); 
+        }
+
+        h2 {
+            font-size: 1.75rem;
+            font-weight: 300;
+            color: var(--secondary-text);
+            margin-bottom: 3rem;
+        }
+
+        /* --- Links / Actions --- */
+        .social-links {
+            display: flex;
+            gap: 2rem;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .social-links a {
+            text-decoration: none;
+            color: var(--text-color);
+            font-weight: 600;
+            font-size: 1.1rem;
+            position: relative;
+            transition: color 0.2s ease;
+        }
+
+        /* Underline animation effect */
+        .social-links a::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 2px;
+            bottom: -4px;
+            left: 0;
+            background-color: var(--accent-color);
+            transition: width 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: var(--accent-color);
+        }
+
+        .social-links a:hover::after {
+            width: 100%;
+        }
+
+        /* --- Footer --- */
+        footer {
+            text-align: center;
+            padding: 2rem;
+            font-size: 0.8rem;
+            color: var(--secondary-text);
+            opacity: 0.7;
+        }
+
+        /* --- Animations --- */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        /* --- Mobile Tweaks --- */
+        @media (max-width: 600px) {
+            h1 { font-size: 2.75rem; }
+            h2 { font-size: 1.25rem; }
+            .social-links { gap: 1.5rem; }
+        }
+    </style>
 </head>
-
 <body>
 
-  <!-- start section header -->
-  <div id="header" class="home">
-
-    <div class="container">
-      <div class="header-content">
-        <h1>I'm <span class="typed"></span></h1>
-        <p>Software Engineer.</p>
-
-        <ul class="list-unstyled list-social">
-          <li><a href="https://twitter.com/frlzno"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/fernandolozanopajaron/"><i class="ion-social-linkedin"></i></a></li>
-          <li><a href="https://github.com/fernandolozano"><i class="ion-social-github"></i></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <!-- End section header -->
-
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/typed/typed.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+    <main>
+        <div class="container">
+            <span class="intro-label">Hello, I'm</span>
+            <h1>Fernando Lozano Pajarón</h1>
+            <h2>Software Engineer.</h2>
+            
+            <div class="social-links">
+                <a href="https://x.com/frlzno" target="_blank">X / Twitter</a>
+                <a href="https://linkedin.com/in/fernando-lozano-pajaron" target="_blank">LinkedIn</a>
+                <a href="https://github.com" target="_blank">GitHub</a>
+            </div>
+        </div>
+    </main>
 
 </body>
-
 </html>
