--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             
             <div class="social-links">
                 <a href="https://x.com/frlzno" target="_blank">X / Twitter</a>
-                <a href="https://linkedin.com/in/fernando-lozano-pajaron" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/fernandolozanopajaron/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/fernandolozano" target="_blank">GitHub</a>
             </div>
         </div>
