--- a/index.html
+++ b/index.html
@@ -12,43 +12,44 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
     <style>
-        /* --- Color Palette (Teal/Emerald Theme) --- */
         :root {
-            --bg-color: #f8fafc; /* Very light cool grey */
-            --text-color: #0f172a; /* Dark slate */
-            --accent-color: #0d9488; /* Teal 600 */
-            --accent-hover: #0f766e; /* Darker Teal */
-            --secondary-text: #64748b; /* Slate 500 */
+            --text-color: #0f172a;
+            --accent-color: #0d9488;
+            --secondary-text: #64748b;
+            --bg-base: #f8fafc;
+            --bg-gradient: 
+                radial-gradient(at 0% 0%, hsla(166,72%,70%,0.3) 0px, transparent 50%),
+                radial-gradient(at 100% 100%, hsla(200,80%,85%,0.3) 0px, transparent 50%);
         }
 
-        /* Dark Mode Support */
         @media (prefers-color-scheme: dark) {
             :root {
-                --bg-color: #0f172a; /* Dark Slate */
-                --text-color: #f1f5f9; /* Off-white */
-                --accent-color: #2dd4bf; /* Bright Teal */
-                --accent-hover: #5eead4; /* Brighter Teal */
-                --secondary-text: #94a3b8; /* Slate 400 */
+                --text-color: #f1f5f9;
+                --accent-color: #2dd4bf;
+                --secondary-text: #94a3b8;
+                --bg-base: #0f172a;
+                --bg-gradient: 
+                    radial-gradient(at 0% 0%, hsla(166,72%,15%,0.5) 0px, transparent 50%),
+                    radial-gradient(at 100% 100%, hsla(190,80%,20%,0.5) 0px, transparent 50%);
             }
         }
 
-        /* --- Global Styles --- */
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
             font-family: 'Inter', sans-serif;
-            background-color: var(--bg-color);
             color: var(--text-color);
             line-height: 1.6;
-            /* Subtle gradient for a modern touch */
-            background-image: linear-gradient(to bottom right, var(--bg-color), transparent);
+            background-color: var(--bg-base);
+            background-image: var(--bg-gradient);
+            background-attachment: fixed;
+            background-size: cover;
             transition: background-color 0.3s ease, color 0.3s ease;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
         }
 
-        /* --- Layout --- */
         main {
             flex: 1;
             display: flex;
@@ -62,11 +63,9 @@
         .container {
             max-width: 800px;
             width: 100%;
-            /* Fade-in animation */
             animation: fadeIn 1s ease-out;
         }
 
-        /* --- Typography --- */
         .intro-label {
             font-size: 0.875rem;
             font-weight: 600;
@@ -87,9 +86,8 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            /* Fallback for browsers that don't support text gradients */
-            color: var(--text-color); 
-        }
+            color: var(--text-color);
+         }
 
         h2 {
             font-size: 1.75rem;
@@ -98,7 +96,6 @@
             margin-bottom: 3rem;
         }
 
-        /* --- Links / Actions --- */
         .social-links {
             display: flex;
             gap: 2rem;
@@ -115,7 +112,6 @@
             transition: color 0.2s ease;
         }
 
-        /* Underline animation effect */
         .social-links a::after {
             content: '';
             position: absolute;
@@ -135,7 +131,6 @@
             width: 100%;
         }
 
-        /* --- Footer --- */
         footer {
             text-align: center;
             padding: 2rem;
@@ -144,13 +139,11 @@
             opacity: 0.7;
         }
 
-        /* --- Animations --- */
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
         }
 
-        /* --- Mobile Tweaks --- */
         @media (max-width: 600px) {
             h1 { font-size: 2.75rem; }
             h2 { font-size: 1.25rem; }
@@ -159,7 +152,6 @@
     </style>
 </head>
 <body>
-
     <main>
         <div class="container">
             <span class="intro-label">Hello, I'm</span>
@@ -173,6 +165,5 @@
             </div>
         </div>
     </main>
-
 </body>
 </html>
