Remove intro label and update social link text
Removed the intro label and adjusted social link text.

--- a/index.html
+++ b/index.html
@@ -66,16 +66,6 @@
             animation: fadeIn 1s ease-out;
         }
 
-        .intro-label {
-            font-size: 0.875rem;
-            font-weight: 600;
-            color: var(--accent-color);
-            text-transform: uppercase;
-            letter-spacing: 0.15em;
-            margin-bottom: 1.2rem;
-            display: block;
-        }
-
         h1 {
             font-size: 4rem;
             font-weight: 800;
@@ -154,12 +144,11 @@
 <body>
     <main>
         <div class="container">
-            <span class="intro-label">Hello, I'm</span>
             <h1>Fernando Lozano Pajarón</h1>
             <h2>Software Engineer.</h2>
             
             <div class="social-links">
-                <a href="https://x.com/frlzno" target="_blank">X / Twitter</a>
+                <a href="https://x.com/frlzno" target="_blank">X</a>
                 <a href="https://www.linkedin.com/in/fernandolozanopajaron/" target="_blank">LinkedIn</a>
                 <a href="https://github.com/fernandolozano" target="_blank">GitHub</a>
             </div>
