--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
             --text-color: #0f172a;
             --accent-color: #0d9488;
             --secondary-text: #64748b;
-            --bg-base: #f8fafc;
-            --bg-gradient: 
-                radial-gradient(at 0% 0%, hsla(166,72%,70%,0.3) 0px, transparent 50%),
-                radial-gradient(at 100% 100%, hsla(200,80%,85%,0.3) 0px, transparent 50%);
+            --bg-base: #f8fafc; /* Clean off-white solid */
         }
 
         @media (prefers-color-scheme: dark) {
@@ -27,10 +24,7 @@
                 --text-color: #f1f5f9;
                 --accent-color: #2dd4bf;
                 --secondary-text: #94a3b8;
-                --bg-base: #0f172a;
-                --bg-gradient: 
-                    radial-gradient(at 0% 0%, hsla(166,72%,15%,0.5) 0px, transparent 50%),
-                    radial-gradient(at 100% 100%, hsla(190,80%,20%,0.5) 0px, transparent 50%);
+                --bg-base: #0f172a; /* Clean dark slate solid */
             }
         }
 
@@ -41,9 +35,7 @@
             color: var(--text-color);
             line-height: 1.6;
             background-color: var(--bg-base);
-            background-image: var(--bg-gradient);
-            background-attachment: fixed;
-            background-size: cover;
+            /* Gradient background properties removed */
             transition: background-color 0.3s ease, color 0.3s ease;
             display: flex;
             flex-direction: column;
@@ -72,12 +64,13 @@
             margin-bottom: 0.5rem;
             line-height: 1.1;
             letter-spacing: -0.03em;
+            /* Kept the text gradient on the Name */
             background: linear-gradient(45deg, var(--text-color), var(--secondary-text));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            color: var(--text-color);
-         }
+            color: var(--text-color); 
+        }
 
         h2 {
             font-size: 1.75rem;
